--- a/templates/user.html
+++ b/templates/user.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
+
 {% block title %}User{% endblock %}
+
 {% block container %}
 <div class="page-header">
     <h1>Hello, {{ name|capitalize }}!</h1>
 </div>
+<p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
+<p>That was {{ moment(current_time).fromNow(refresh=True) }}.</p>
 {% endblock %}
