--- a/templates/500.html
+++ b/templates/500.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
+
 {% block title %}Flasky - Error server{% endblock %}
+
 {% block container %}
 <div class="page-header">
     <h1>Error server</h1>
 </div>
+<p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
+<p>That was {{ moment(current_time).fromNow(refresh=True) }}.</p>
 {% endblock %}
